--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,12 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .history/
-
+exiftool_test/
 Google Photos copy/
 Google Photos/
 
 repomix.config.json
-
+repomix-output.md.txt
 .repomixignore
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
