--- a/repomix.config.json
+++ b/repomix.config.json
@@ -7,19 +7,19 @@
     "filePath": "repomix-output.md.txt",
     "style": "markdown",
     "parsableStyle": false,
-    "fileSummary": true,
+    "fileSummary": false,
     "directoryStructure": true,
     "files": true,
     "removeComments": false,
-    "removeEmptyLines": false,
+    "removeEmptyLines": true,
     "compress": false,
     "topFilesLength": 5,
     "showLineNumbers": false,
-    "truncateBase64": false,
+    "truncateBase64": true,
     "copyToClipboard": false,
     "tokenCountTree": false,
     "git": {
-      "sortByChanges": true,
+      "sortByChanges": false,
       "sortByChangesMaxCommits": 100,
       "includeDiffs": false,
       "includeLogs": false,
