--- a/config/exif_mapping_clean.json
+++ b/config/exif_mapping_clean.json
@@ -54,20 +54,21 @@
   },
   "strategies": {
     "preserve_existing": {
-      "description": "Écrire seulement si le tag n'existe pas",
-      "pattern": ["-${tag}<=${value}"]
-    },
-    "write_if_missing": {
-      "description": "Écrire si le tag est vide ou n'existe pas", 
+      "description": "N'écrit la valeur que si le tag n'existe pas. Ne modifie jamais une valeur existante. Utilise le mode 'create group' d'ExifTool.",
       "pattern": ["-wm", "cg", "-${tag}=${value}"]
     },
+    "write_if_missing": {
+      "description": "Écrire seulement si la valeur est absente (via condition -if). Peut écraser une valeur vide existante.",
+      "condition_template": "-if \"not $${tag}\"",
+      "pattern": ["-${tag}=${value}"]
+    },
     "replace_all": {
-      "description": "Remplacer complètement la valeur",
-      "pattern": ["-overwrite_original", "-${tag}=${value}"]
+      "description": "Remplacer complètement la valeur (pas de condition)",
+      "pattern": ["-${tag}=${value}"]
     },
     "clean_duplicates": {
-      "description": "Nettoyer les doublons avant écriture",
-      "pattern": ["${tag}-=${value}", "${tag}+=${value}"]
+      "description": "Supprimer occurrences existantes puis ajouter (listes)",
+      "pattern": ["-${tag}-=${value}", "-${tag}+=${value}" ]
     }
   },
   "global_settings": {
