ajout de scripts pour organiser les images par dossier date AAAA-MM

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ exiftool_test/
 Google Photos copy/
 Google Photos/
 archive/
+essai/
 archive/old_configs/
 repomix.config.json
 repomix-output.md.txt
